# internal/server/server.go
@@ -22,24 +22,116 @@ type srv struct {
 	l *slog.Logger
 }
 
-func (s *srv) GenerateRandom(c *gin.Context, format restapi.GenerateRandomParamsFormat, params restapi.GenerateRandomParams) {
-	var invParams []restapi.InvalidParameter
+func (s *srv) PostApiDefineFormat(c *gin.Context, format restapi.OutputFormat, params restapi.PostApiDefineFormatParams) {
 	ctx := c.Request.Context()
+	if c.Request.ContentLength > (1 << 20) {
+		c.PureJSON(http.StatusBadRequest, restapi.ErrorResponse{
+			Status:  http.StatusBadRequest,
+			Details: "Bad Request",
+			InvalidParameters: &[]restapi.InvalidParameter{
+				{
+					Field:  "payload",
+					Reason: "Max payload size is 1MiB",
+				},
+			},
+		})
+		return
+	}
+
+	var invParams []restapi.InvalidParameter
+	inputGraph := restapi.PostApiDefineFormatJSONRequestBody{}
+	if err := c.BindJSON(&inputGraph); err != nil {
+		invParams = append(invParams, restapi.InvalidParameter{
+			Field:  "payload",
+			Reason: "failed to parse payload: " + err.Error(),
+		})
+	}
+
+	graph := apis.ServiceGraph{
+		GenerationParams: "provided by api",
+	}
+	if len(inputGraph.Services) == 0 || len(inputGraph.Services) > 5000 {
+		invParams = append(invParams, restapi.InvalidParameter{
+			Field:  "payload.services",
+			Reason: "can't have 0 or more than 5000 services",
+		})
+	} else {
+		for i, srv := range inputGraph.Services {
+			if len(srv.Edges) > 50 {
+				invParams = append(invParams, restapi.InvalidParameter{
+					Field:  fmt.Sprintf("payload.services[%d].edges", i),
+					Reason: fmt.Sprintf("can't have more than 50 edges"),
+				})
+			} else {
+				for j, edge := range srv.Edges {
+					if edge > len(inputGraph.Services) || edge < 0 {
+						invParams = append(invParams, restapi.InvalidParameter{
+							Field:  fmt.Sprintf("payload.services[%d].edges[%d]", i, j),
+							Reason: fmt.Sprintf("the destination of the call is not an existing entity, max index %d", len(inputGraph.Services)),
+						})
+					}
+				}
+				graph.Services = append(graph.Services, apis.Service{
+					Idx:      i,
+					Replicas: srv.Replicas,
+					Edges:    srv.Edges,
+				})
+			}
+		}
+	}
+
+	config, contentType, invConfParams := s.extractConfig(format, params.K8s, params.K8sApp, params.K8sNamespace, nil)
+	invParams = append(invParams, invConfParams...)
+
+	if len(invParams) > 0 {
+		c.PureJSON(http.StatusBadRequest, restapi.ErrorResponse{
+			Status:            http.StatusBadRequest,
+			Details:           "Bad Request",
+			InvalidParameters: &invParams,
+		})
+		return
+	}
+
+	buf := bytes.Buffer{}
+	config.Writer = &buf
+	err := generate.Run(config, func(seed int64) (apis.ServiceGraph, error) {
+		return graph, nil
+	})
+	if err != nil {
+		if errors.Is(err, &generate.InvalidConfError{}) {
+			c.PureJSON(http.StatusBadRequest, restapi.ErrorResponse{
+				Status:  http.StatusBadRequest,
+				Details: err.Error(),
+			})
+			return
+		} else {
+			s.l.ErrorContext(ctx, "failed request", "error", err)
+			c.PureJSON(http.StatusInternalServerError, restapi.ErrorResponse{
+				Status:  http.StatusInternalServerError,
+				Details: "internal error",
+			})
+			return
+		}
+	}
+	c.Data(http.StatusOK, contentType, buf.Bytes())
+
+}
+
+func (s *srv) extractConfig(format restapi.OutputFormat, k8s *bool, k8sApp *restapi.K8sAppType, k8sNamespace *string, seed *int) (generate.Config, string, []restapi.InvalidParameter) {
+	s.l.Info("foo", "format", format)
+	var invParams []restapi.InvalidParameter
 	config := generate.DefaultConfig()
-	if params.K8sApp != nil {
-		config.K8sApp = string(*params.K8sApp)
+	if k8sApp != nil {
+		config.K8sApp = string(*k8sApp)
 	}
-	if params.K8sNamespace != nil {
-		config.K8sNamespace = *params.K8sNamespace
-	}
-	if params.Seed != nil {
-		config.Seed = int64(*params.Seed)
+	if k8sNamespace != nil {
+		config.K8sNamespace = *k8sNamespace
 	}
 	contentType := ""
 	switch format {
 	case restapi.Empty, restapi.Yaml:
 		contentType = "application/yaml"
-		if params.K8s != nil && *params.K8s {
+		if k8s != nil && *k8s {
 			config.Output = "k8s"
 		} else {
 			config.Output = "yaml"
@@ -59,6 +151,17 @@ func (s *srv) GenerateRandom(c *gin.Context, format restapi.GenerateRandomParams
 			Reason: "not a supported type",
 		})
 	}
+	if seed != nil {
+		config.Seed = int64(*seed)
+	}
+	return config, contentType, invParams
+}
+
+func (s *srv) GenerateRandom(c *gin.Context, format restapi.OutputFormat, params restapi.GenerateRandomParams) {
+	var invParams []restapi.InvalidParameter
+	ctx := c.Request.Context()
+	config, contentType, invConfParams := s.extractConfig(format, params.K8s, params.K8sApp, params.K8sNamespace, params.Seed)
+	invParams = append(invParams, invConfParams...)
 	numServices := 5
 	if params.NumServices != nil {
 		numServices = *params.NumServices
@@ -122,7 +225,7 @@ func (s *srv) GenerateRandom(c *gin.Context, format restapi.GenerateRandomParams
 			})
 			return
 		} else {
-			s.l.InfoContext(ctx, "failed request", "error", err)
+			s.l.ErrorContext(ctx, "failed request", "error", err)
 			c.PureJSON(http.StatusInternalServerError, restapi.ErrorResponse{
 				Status:  http.StatusInternalServerError,
 				Details: "internal error",
@@ -165,7 +268,7 @@ func Start(ctx context.Context) error {
 			Details: "Internal server error",
 		})
 	}), obs.Middleware())
-	restapi.RegisterHandlersWithOptions(engine, &srv{}, restapi.GinServerOptions{
+	restapi.RegisterHandlersWithOptions(engine, &srv{l: obs.Logger().WithGroup("handler")}, restapi.GinServerOptions{
 		ErrorHandler: func(c *gin.Context, err error, status int) {
 			c.PureJSON(status, &restapi.ErrorResponse{
 				Status:  status,
